--- a/index.css
+++ b/index.css
@@ -4,3 +4,34 @@
     width: 100px;
     border-radius: 50px;
 }
+body{
+ /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#febbbb+0,fe9090+45,ff5c5c+100;Red+3D+%231 */
+background: #febbbb; /* Old browsers */
+background: -moz-linear-gradient(left,  #febbbb 0%, #fe9090 45%, #ff5c5c 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(left,  #febbbb 0%,#fe9090 45%,#ff5c5c 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to right,  #febbbb 0%,#fe9090 45%,#ff5c5c 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#febbbb', endColorstr='#ff5c5c',GradientType=1 ); /* IE6-9 */
+ 
+}
+.user-box
+{
+    display: inline-block;
+    padding: 10px;
+    box-shadow: 2px 2px 8px grey;
+    background-color: #ffffff;
+    margin: 5px;
+}
+.user-box img
+{
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+    margin: 0 auto;
+}
+.user-box p
+{
+    margin-bottom: 0px !important;
+    font-size: 15px;
+    font-weight: bold;
+    text-align: center;
+}
