--- a/index.css
+++ b/index.css
@@ -21,6 +21,33 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#febbbb', end
     background-color: #ffffff;
     margin: 5px;
 }
+.follower-box
+{
+    background: #cedce7; /* Old browsers */
+    background: -moz-linear-gradient(left,  #cedce7 0%, #596a72 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(left,  #cedce7 0%,#596a72 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to right,  #cedce7 0%,#596a72 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cedce7', endColorstr='#596a72',GradientType=1 ); /* IE6-9 */
+     padding: 0px;
+    box-shadow: 2px 2px 8px grey;
+    margin-bottom: -13px;
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 15px;
+}
+.ul-list
+{
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+.follower-box img
+{
+    width: 60px;
+    height: 60px;
+    padding: 10px;
+    border-radius: 50px;
+    margin: 0 auto;
+}
 .user-box img
 {
     width: 100px;
@@ -34,4 +61,41 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#febbbb', end
     font-size: 15px;
     font-weight: bold;
     text-align: center;
+}
+.header
+{
+    padding: 15px;
+    margin-bottom: 20px;
+ /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#cedce7+0,596a72+100;Grey+3D+%231 */
+background: #cedce7; /* Old browsers */
+background: -moz-linear-gradient(left,  #cedce7 0%, #596a72 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(left,  #cedce7 0%,#596a72 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to right,  #cedce7 0%,#596a72 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cedce7', endColorstr='#596a72',GradientType=1 ); /* IE6-9 */
+
+}
+.header-data
+{
+    font-size: 40px;
+    font-weight: bold;
+    vertical-align: middle;
+    margin-left: 10px;
+}
+.header-hr
+{
+    box-shadow: 4px 6px 9px -6px grey;
+    border: solid 0px #e5dfdf;
+    height: 15px;
+}
+.hr-div
+{
+    margin-top: -34px;
+}
+ul li
+{
+    font-weight: bold;  
+}
+ul li a
+{
+    color: #ffffff;
 }
