--- a/index.css
+++ b/index.css
@@ -23,15 +23,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#febbbb', end
 }
 .follower-box
 {
-    background: #cedce7; /* Old browsers */
-    background: -moz-linear-gradient(left,  #cedce7 0%, #596a72 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(left,  #cedce7 0%,#596a72 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to right,  #cedce7 0%,#596a72 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cedce7', endColorstr='#596a72',GradientType=1 ); /* IE6-9 */
-     padding: 0px;
-    box-shadow: 2px 2px 8px grey;
+/* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#d4e4ef+0,86aecc+100;Grey+Gloss */
+background: rgb(212,228,239); /* Old browsers */
+background: -moz-linear-gradient(left,  rgba(212,228,239,1) 0%, rgba(134,174,204,1) 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(left,  rgba(212,228,239,1) 0%,rgba(134,174,204,1) 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to right,  rgba(212,228,239,1) 0%,rgba(134,174,204,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d4e4ef', endColorstr='#86aecc',GradientType=1 ); /* IE6-9 */
+ box-shadow: 2px 2px 8px grey;
     margin-bottom: -13px;
-    color: #ffffff;
     font-weight: bold;
     font-size: 15px;
 }
